--- a/src/components/CaForm/CaForm.css
+++ b/src/components/CaForm/CaForm.css
@@ -182,20 +182,23 @@
   }
 }
 
-
 @media only screen and (min-width: 1280px) and (max-width: 1366px) {
   .ca_logo {
-    width: 18%;
-  }}
-
-/* Estilos para tablets */
-@media only screen and (min-width: 768px) and (max-width: 1199px) {
-  .ca_logo {
-    width: 18%;
+    width: 25%;
   }
+  .ca_form_button{
+   height: 40px;
+  }
+  .ca_tag_form{
+    font-size: .8rem;
+  }
+  .ca_input_form{
+    font-size: .8rem;
+    margin-bottom: .5rem;
+  }
+
+
+
 }
 
-/* Estilos para teléfonos celulares */
-@media only screen and (max-width: 767px) {
-  /* Tus estilos para teléfonos celulares aquí */
-}
+
