--- a/src/components/CaForm/CaForm.css
+++ b/src/components/CaForm/CaForm.css
@@ -197,8 +197,8 @@
     margin-bottom: .3rem;
   }
 
-  .ca_input_error{
-    font-size: .5rem;
+  .ca_error_message{
+    font-size: .8rem;
   }
 
 
