--- a/src/components/ProfForm/ProForm.css
+++ b/src/components/ProfForm/ProForm.css
@@ -45,6 +45,10 @@
   font-weight: 600;
 }
 
+.prof_error_message{
+  font-size: .8rem;
+}
+
 .prof_input_form {
   padding-top: 1rem;
   border: none;
@@ -195,7 +199,7 @@
 
 @media only screen and (min-width: 1280px) and (max-width: 1366px) {
   .prof_logo {
-    width: 25%;
+    width: 20%;
   }
   .prof_form_button{
    height: 40px;
@@ -208,7 +212,7 @@
     margin-bottom: .5rem;
   }
   .prof_error_message{
-    font-size: .5rem;
+    font-size: .8rem;
   }
 
 
