--- a/src/components/ProjectForm/ProjectForm.css
+++ b/src/components/ProjectForm/ProjectForm.css
@@ -35,6 +35,7 @@
   display: flex;
   flex-direction: row;
   margin-top: 1rem;
+  flex-wrap: wrap;
 }
 
 .project_form_col {
@@ -53,6 +54,7 @@
 .project_form_row_buttons {
   display: flex;
   justify-content: flex-end;
+  width: 100%;
 }
 
 
